Not work version (for storage)

--- a/Megafon/JazzSMTestWidget/AggPair1.html
+++ b/Megafon/JazzSMTestWidget/AggPair1.html
@@ -5,6 +5,6 @@
 	<script type="text/javascript" src="./js/main.js"></script>
 	</head>
 	<body>
-		<canvas id="AGGPair1Chart" height="100" width="300"></canvas>
+		<canvas id="AGGPair1Chart" class="chartjs" height="100" width="300"></canvas>
 	</body>
 </html>
